--- a/app/styles/community-benefits-container.scss
+++ b/app/styles/community-benefits-container.scss
@@ -33,7 +33,7 @@
     }
 
     .benefits-content-container {
-        /*background-image: url(/assets/images/background_benefits.png);
+        /*background-image: url(../assets/images/background_benefits.png);
         background-repeat: no-repeat;
         background-size: 47%;
         background-position-x: 85%;
@@ -108,7 +108,7 @@
             /*width: 18vw;
             height: 7.5vw;
             margin-left: 8%;
-            background:url(/assets/images/button-benefits-make-part.png);
+            background:url(../assets/images/button-benefits-make-part.png);
             background-size:100%; 
             background-repeat: no-repeat;*/
             outline: none;
@@ -136,7 +136,7 @@
             /*width: 19vw;
             height: 6.14vw;
             margin-left: 4%;
-            background:url(/assets/images/button-benefits-know-plans.png);
+            background:url(../assets/images/button-benefits-know-plans.png);
             background-size:100%; 
             background-repeat: no-repeat;*/
             outline: none;
@@ -198,7 +198,7 @@
     }
 
     .benefits-content-container {
-        background-image: url(/assets/images/background_benefits.png);
+        background-image: url(../assets/images/background_benefits.png);
         background-repeat: no-repeat;
         background-size: 47%;
         background-position-x: 85%;
@@ -271,7 +271,7 @@
             width: 18vw;
             height: 7.5vw;
             margin-left: 8%;
-            background:url(/assets/images/button-benefits-make-part.png);
+            background:url(../assets/images/button-benefits-make-part.png);
             background-size:100%; 
             background-repeat: no-repeat;
             outline: none;
@@ -299,7 +299,7 @@
             width: 19vw;
             height: 6.14vw;
             margin-left: 4%;
-            background:url(/assets/images/button-benefits-know-plans.png);
+            background:url(../assets/images/button-benefits-know-plans.png);
             background-size:100%; 
             background-repeat: no-repeat;
             outline: none;
@@ -363,7 +363,7 @@
     }
 
     .benefits-content-container {
-        background-image: url(/assets/images/background_benefits.png);
+        background-image: url(../assets/images/background_benefits.png);
         background-repeat: no-repeat;
         background-size: 47%;
         background-position-x: 85%;
@@ -452,7 +452,7 @@
             //flex-direction: 
             margin-left: auto;
             margin-right: auto;
-            background:url(/assets/images/button-be-membership-responsive.png);
+            background:url(../assets/images/button-be-membership-responsive.png);
             background-size:100%; 
             background-repeat: no-repeat;
             text-align: center;
@@ -492,7 +492,7 @@
             width: 70vw;
             height: 57.14vw;
             margin-left: 4%;
-            background:url(/assets/images/button-benefits-know-plans.png);
+            background:url(../assets/images/button-benefits-know-plans.png);
             background-size:100%; 
             background-repeat: no-repeat;
             margin-left: auto;
