--- a/app/styles/community-our-team-container.scss
+++ b/app/styles/community-our-team-container.scss
@@ -35,7 +35,7 @@
             width: 10%;
             margin-left: 28%;
             margin-top: -7.25vw;
-            background:url(/assets/images/image-title-our-team.png);
+            background:url(../assets/images/image-title-our-team.png);
             background-size:35%; 
             background-repeat: no-repeat;*/
         }
@@ -97,7 +97,7 @@
                 /*width: 100%;
                 height: 7vw;
                 margin-top: 28%;
-                background:url(/assets/images/third-button-make-part.png);
+                background:url(../assets/images/third-button-make-part.png);
                 background-size:100%; 
                 background-repeat: no-repeat;
                 overflow: auto;
@@ -127,7 +127,7 @@
                 /*width: 100%;
                 height: 7vw;
                 margin-top: 28%;
-                background:url(/assets/images/second-button-make-part.png);
+                background:url(../assets/images/second-button-make-part.png);
                 background-size:100%; 
                 background-repeat: no-repeat;
                 overflow: auto;
@@ -199,7 +199,7 @@
             width: 10%;
             margin-left: 28%;
             margin-top: -7.25vw;
-            background:url(/assets/images/image-title-our-team.png);
+            background:url(../assets/images/image-title-our-team.png);
             background-size:35%; 
             background-repeat: no-repeat;
         }
@@ -261,7 +261,7 @@
                 width: 100%;
                 height: 7vw;
                 margin-top: 28%;
-                background:url(/assets/images/third-button-make-part.png);
+                background:url(../assets/images/third-button-make-part.png);
                 background-size:100%; 
                 background-repeat: no-repeat;
                 overflow: auto;
@@ -289,7 +289,7 @@
                 width: 100%;
                 height: 7vw;
                 margin-top: 28%;
-                background:url(/assets/images/second-button-make-part.png);
+                background:url(../assets/images/second-button-make-part.png);
                 background-size:100%; 
                 background-repeat: no-repeat;
                 overflow: auto;
@@ -360,7 +360,7 @@
             width: 27vw;
             margin-left: 75%;
             margin-top: -6vw;
-            background:url(/assets/images/image-title-our-team.png);
+            background:url(../assets/images/image-title-our-team.png);
             background-size:35%; 
             background-repeat: no-repeat;
         }
@@ -429,7 +429,7 @@
                 height: 24vw;
                 //height: 7vw;
                 margin-top: -65vw;
-                background:url(/assets/images/third-button-make-part.png);
+                background:url(../assets/images/third-button-make-part.png);
                 background-size: 100%; 
                 background-repeat: no-repeat;
                 //overflow: auto;
@@ -462,7 +462,7 @@
                 //height: 7vw;
                 margin-top: -65vw;
                 
-                background:url(/assets/images/second-button-make-part.png);
+                background:url(../assets/images/second-button-make-part.png);
                 background-size:100%; 
                 background-repeat: no-repeat;
                
