--- a/app/styles/knowledge-advantage-container.scss
+++ b/app/styles/knowledge-advantage-container.scss
@@ -30,7 +30,7 @@
            z-index:1;
            overflow: visible;
            position: absolute;
-           background-image:url(/assets/images/knowledge_description_container.png);
+           background-image:url(../assets/images/knowledge_description_container.png);
            background-size:100%; 
            background-repeat: no-repeat;*/
            
@@ -52,7 +52,7 @@
            overflow: visible;
            margin-right: 45%;
            z-index:2;
-           content:url(/assets/images/knowledge-picture.png);
+           content:url(../assets/images/knowledge-picture.png);
        */
        }
 
@@ -63,7 +63,7 @@
            z-index:99;
            margin-right: -25%;
            margin-top: -3%;
-           content:url(/assets/images/retangleLogo.png);*/
+           content:url(../assets/images/retangleLogo.png);*/
        }
        
          .membership-main-title {
@@ -74,7 +74,7 @@
            overflow: auto;
            position: absolute;
            z-index:3;
-           background:url(/assets/images/background_button_knowledge.png);
+           background:url(../assets/images/background_button_knowledge.png);
            background-size:100%; 
            background-repeat: no-repeat;*/
            
@@ -133,7 +133,7 @@
             z-index:2;
             overflow: visible;
             position: absolute;
-            background-image:url(/assets/images/knowledge_description_container.png);
+            background-image:url(../assets/images/knowledge_description_container.png);
             background-size:100%; 
             background-repeat: no-repeat;
             
@@ -155,7 +155,7 @@
             overflow: visible;
             margin-right: 45%;
             z-index:1;
-            content:url(/assets/images/knowledge-background-membership.jpg);
+            content:url(../assets/images/knowledge-background-membership.jpg);
         }
 
         .membership-detail-main-picture {
@@ -165,7 +165,7 @@
             z-index:99;
             margin-right: -25%;
             margin-top: -4%;
-            content:url(/assets/images/retangleLogo.png);
+            content:url(../assets/images/retangleLogo.png);
         }
         
           .membership-main-title {
@@ -176,7 +176,7 @@
             overflow: auto;
             position: absolute;
             z-index:3;
-            background:url(/assets/images/background_button_knowledge.png);
+            background:url(../assets/images/background_button_knowledge.png);
             background-size:100%; 
             background-repeat: no-repeat;
             
@@ -232,7 +232,7 @@
             align-content: center;
             margin-left: 6vw;
             z-index:1;
-            background-image:url(/assets/images/knowledge_description_container_responsive.png);
+            background-image:url(../assets/images/knowledge_description_container_responsive.png);
             background-size:99%; 
             background-repeat: no-repeat;
             
@@ -257,7 +257,7 @@
             margin-left: 8vw;
             margin-top: -10.9vw;
             z-index:2;
-            content:url(/assets/images/knowledge-background-membership.jpg);
+            content:url(../assets/images/knowledge-background-membership.jpg);
         }
 
         .membership-detail-main-picture {
@@ -267,7 +267,7 @@
             z-index:99;
             margin-left: 2vw;
             margin-top: -225vw;
-            content:url(/assets/images/retangleLogo.png);
+            content:url(../assets/images/retangleLogo.png);
         }
         
           .membership-main-title {
@@ -278,7 +278,7 @@
             overflow: auto;
             position: absolute;
             z-index:3;
-            background:url(/assets/images/background_button_knowledge.png);
+            background:url(../assets/images/background_button_knowledge.png);
             background-size:100%; 
             background-repeat: no-repeat;
             
