--- a/app/styles/knowledge-events-container.scss
+++ b/app/styles/knowledge-events-container.scss
@@ -52,7 +52,7 @@
 
 
         .border-background {
-                /*content: url('/assets/images/workspace-table-plans-border-background.png');
+                /*content: url('../assets/images/workspace-table-plans-border-background.png');
                 position: absolute;
                 height: 110vw;
                 width: 94vw;*/
@@ -135,7 +135,7 @@ _:-webkit-full-screen:not(:root:root), .border-background {
 
 
             .border-background {
-                    content: url('/assets/images/workspace-table-plans-border-background.png');
+                    content: url('../assets/images/workspace-table-plans-border-background.png');
                     position: absolute;
                     height: 110vw;
                     width: 94vw;
