--- a/app/styles/knowledge.scss
+++ b/app/styles/knowledge.scss
@@ -42,7 +42,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         display: block;
-        background-image: url('/assets/images/knowledge-background-second-navbar.jpg');
+        background-image: url('../assets/images/knowledge-background-second-navbar.jpg');
         width: 100%;
         height: 100%;
 
