--- a/app/styles/sign-up-membership.scss
+++ b/app/styles/sign-up-membership.scss
@@ -23,7 +23,7 @@ $background-color: rgba(247,247,247,1);
         width: 40%; 
         height: 6vw;
         margin-left: 7.5vw;
-        background:url(/assets/images/background_button_membership.png);
+        background:url(../assets/images/background_button_membership.png);
         background-size:20.5vw; 
         background-repeat: no-repeat;*/
 
@@ -95,7 +95,7 @@ $background-color: rgba(247,247,247,1);
 
            .label-icon {
              /*margin-left: 1vw;
-             background: url(/assets/images/sign_up_membership_page_detail_picture.png);
+             background: url(../assets/images/sign_up_membership_page_detail_picture.png);
              height: 2vw;
              width: 3vw;
              background-size: 100%;*/
@@ -106,7 +106,7 @@ $background-color: rgba(247,247,247,1);
         .description-picture {  
           /*margin-top: 2vw;     
           margin-left: 2vw;   
-          background: url(/assets/images/sign-up-membership-detail-picture.png);
+          background: url(../assets/images/sign-up-membership-detail-picture.png);
           width: 89%;
           height: 67.5%;*/
         }      
@@ -179,7 +179,7 @@ $background-color: rgba(247,247,247,1);
             }
 
             .subscribe-button-background-borders {
-            /*content: url('/assets/images/background-boarder-do-here.png');
+            /*content: url('../assets/images/background-boarder-do-here.png');
             left: -4vw;
             bottom: 6vw; 
             width: 17vw;
@@ -235,7 +235,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
           width: 40%; 
           height: 6vw;
           margin-left: 7.5vw;
-          background:url(/assets/images/background_button_membership.png);
+          background:url(../assets/images/background_button_membership.png);
           background-size:20.5vw; 
           background-repeat: no-repeat;
 
@@ -309,7 +309,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
 
             .label-icon {
               margin-left: 1vw;
-              background: url(/assets/images/sign_up_membership_page_detail_picture.png);
+              background: url(../assets/images/sign_up_membership_page_detail_picture.png);
               height: 2vw;
               width: 3vw;
               background-size: 100%;
@@ -320,7 +320,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
           .description-picture {  
             margin-top: 2vw;     
             margin-left: 2vw;   
-            background: url(/assets/images/sign-up-membership-detail-picture.jpg);
+            background: url(../assets/images/sign-up-membership-detail-picture.jpg);
             height: 35vw;
             width: auto;
             background-size: cover;
@@ -397,7 +397,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
               }
 
               .subscribe-button-background-borders {
-              content: url('/assets/images/background-boarder-do-here.png');
+              content: url('../assets/images/background-boarder-do-here.png');
               left: -4vw;
               bottom: 5vw; 
               width: 17vw;
@@ -443,7 +443,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
           width: 75vw; 
           height: 20.3vw;
           margin-left: 5vw;
-          background:url(/assets/images/background_button_membership.png);
+          background:url(../assets/images/background_button_membership.png);
           background-size:100%; 
           background-repeat: no-repeat;
 
@@ -510,7 +510,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
             .label-icon {
               margin-top: 20%;
               margin-left: -1vw;
-              background: url(/assets/images/sign_up_membership_page_detail_picture.png);
+              background: url(../assets/images/sign_up_membership_page_detail_picture.png);
               height: 6vw;
               width: 9vw;
               background-size: 100%;
@@ -522,7 +522,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
           .description-picture {  
             margin-top: 10vw;   
             margin-bottom: 0vw;    
-            background: url(/assets/images/sign-up-membership-detail-picture.jpg);
+            background: url(../assets/images/sign-up-membership-detail-picture.jpg);
             width: 100vw;
             height: 60vw;
             background-repeat:no-repeat; 
@@ -601,7 +601,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
               }
 
               .subscribe-button-background-borders {
-                content: url('/assets/images/background-boarder-do-here.png');
+                content: url('../assets/images/background-boarder-do-here.png');
                 left: -18vw;
                 bottom: 20vw; 
                 width: 68vw;
