--- a/app/styles/work-space-opnion-container.scss
+++ b/app/styles/work-space-opnion-container.scss
@@ -31,7 +31,7 @@
            z-index:5;
            overflow: visible;
            position: absolute;
-           background-image:url(/assets/images/work-space-opinion-background-left.png);
+           background-image:url(../assets/images/work-space-opinion-background-left.png);
            background-size: 100%;
            background-repeat: no-repeat;*/
            
@@ -80,7 +80,7 @@
            z-index:99;
            margin-right: -29%;
            margin-top: -3.6%;
-           content:url(/assets/images/work-space-opinion-detail-left.png);*/
+           content:url(../assets/images/work-space-opinion-detail-left.png);*/
        }
      }
 
@@ -105,7 +105,7 @@
            z-index:-1;
            overflow: visible;
            position: absolute;
-           background-image:url(/assets/images/work-space-opinion-background-right.png);
+           background-image:url(../assets/images/work-space-opinion-background-right.png);
            background-size: 100%;
            background-repeat: no-repeat;*/
 
@@ -156,7 +156,7 @@
            z-index:99;
            margin-left: -24.9%;
            margin-top: -11.5%;
-           content:url(/assets/images/work-space-opinion-detail-right.png);*/
+           content:url(../assets/images/work-space-opinion-detail-right.png);*/
         } 
       }
 }
@@ -196,7 +196,7 @@
             z-index:5;
             overflow: visible;
             position: absolute;
-            background-image:url(/assets/images/work-space-opinion-background-left.png);
+            background-image:url(../assets/images/work-space-opinion-background-left.png);
             background-size: 100%;
             background-repeat: no-repeat;
             
@@ -245,7 +245,7 @@
             z-index:99;
             margin-right: -29%;
             margin-top: -3.6%;
-            content:url(/assets/images/work-space-opinion-detail-left.png);
+            content:url(../assets/images/work-space-opinion-detail-left.png);
         }
       }
 
@@ -270,7 +270,7 @@
             z-index:1;
             overflow: visible;
             position: absolute;
-            background-image:url(/assets/images/work-space-opinion-background-right.png);
+            background-image:url(../assets/images/work-space-opinion-background-right.png);
             background-size: 100%;
             background-repeat: no-repeat;
 
@@ -321,7 +321,7 @@
             z-index:99;
             margin-left: -24.9%;
             margin-top: -11.5%;
-            content:url(/assets/images/work-space-opinion-detail-right.png);
+            content:url(../assets/images/work-space-opinion-detail-right.png);
           } 
         }
   }
@@ -362,7 +362,7 @@
             z-index:5;
             overflow: visible;
             position: absolute;
-            background-image:url(/assets/images/work-space-opinion-background-left-responsive.png);
+            background-image:url(../assets/images/work-space-opinion-background-left-responsive.png);
             background-size: 100%;
             background-repeat: no-repeat;
             
@@ -414,7 +414,7 @@
             position: absolute;
             left: 5%;
             top: -13%;
-            content:url(/assets/images/work-space-opinion-detail-left.png);
+            content:url(../assets/images/work-space-opinion-detail-left.png);
         }
       }
 
@@ -442,7 +442,7 @@
 
             overflow: visible;
             position: absolute;
-            background-image:url(/assets/images/work-space-opinion-background-right-responsive.png);
+            background-image:url(../assets/images/work-space-opinion-background-right-responsive.png);
             background-size: 100%;
             background-repeat: no-repeat;
 
@@ -496,7 +496,7 @@
             position: absolute;
             right: 5%;
             top: 48%;
-            content:url(/assets/images/work-space-opinion-detail-right.png);
+            content:url(../assets/images/work-space-opinion-detail-right.png);
           } 
         }
   }
