--- a/app/styles/work-space-plans-container.scss
+++ b/app/styles/work-space-plans-container.scss
@@ -10,7 +10,7 @@
         position: relative;*/
 
         .border-background {
-            /*content: url('/assets/images/workspace-table-plans-border-background.png');                                        // background: green;                             
+            /*content: url('../assets/images/workspace-table-plans-border-background.png');                                        // background: green;                             
             position: absolute;
             height: 160vw;
             width: 95vw;
@@ -49,7 +49,7 @@ _:-webkit-full-screen:not(:root:root), .border-background {
         position: relative;
 
         .border-background {
-            /*content: url('/assets/images/workspace-table-plans-border-background.png');                                        // background: green;                             
+            /*content: url('../assets/images/workspace-table-plans-border-background.png');                                        // background: green;                             
             position: absolute;
             height: 160vw;
             width: 95vw;
