--- a/app/styles/work-space-plans-content-item.scss
+++ b/app/styles/work-space-plans-content-item.scss
@@ -17,7 +17,7 @@
                             /*width: 100%;
                             background-repeat: no-repeat;
                             background-size: cover;
-                            background-image: url('/assets/images/workspace-header-item-background-filter.png');*/
+                            background-image: url('../assets/images/workspace-header-item-background-filter.png');*/
 
     
                                 .work-space-plans-content-item-header {
@@ -220,7 +220,7 @@
                     width: 100%;
                     background-repeat: no-repeat;
                     background-size: cover;
-                    background-image: url('/assets/images/workspace-header-item-background-filter.png');
+                    background-image: url('../assets/images/workspace-header-item-background-filter.png');
 
     
                     .work-space-plans-content-item-header {
@@ -424,7 +424,7 @@
                     height: auto;
                     background-repeat: no-repeat;
                     background-size: cover;
-                    background-image: url('/assets/images/workspace-header-item-background-filter.png');
+                    background-image: url('../assets/images/workspace-header-item-background-filter.png');
 
     
                     .work-space-plans-content-item-header {
