--- a/app/templates/components/bottom-bar/bottom-bar.hbs
+++ b/app/templates/components/bottom-bar/bottom-bar.hbs
@@ -1,7 +1,7 @@
 <div class="bottom-opnion-container">
                 <div style="background-color:{{backgroundColor}}" class="container-information-footer">
-                         <img src="/assets/images/background-footer-left.png" class="background-footer-left">
-                        <img src="/assets/images/background-footer-right.png" class="background-footer-right">
+                         <img src="./assets/images/background-footer-left.png" class="background-footer-left">
+                        <img src="./assets/images/background-footer-right.png" class="background-footer-right">
                          <div class = "container-background-information">
 
                               <div class = "container-title-information">
