--- a/app/templates/components/sign-up-membership-detail-container.hbs
+++ b/app/templates/components/sign-up-membership-detail-container.hbs
@@ -2,7 +2,7 @@
         <div class="page-header">
             <div class="header-name">
                 {{#if haveImage}}
-                  <img src="/assets/images/white-logo-55-community.png">
+                  <img src="./assets/images/white-logo-55-community.png">
                 {{else}}
                     <h1> {{this.memberType}} </h1>
                 {{/if}}
