--- a/app/templates/components/work-space/work-space-advantage-container.hbs
+++ b/app/templates/components/work-space/work-space-advantage-container.hbs
@@ -30,7 +30,7 @@
                 <h1>{{contentObject.contentSecondObjectOneTable.descriptionActionButton}}</h1>
             </div>
 
-            <button class="advantage-do-it-button"  style = "background:url(/assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentSecondObjectOneTable.titleActionButton}}{{/link-to}}</button>
+            <button class="advantage-do-it-button"  style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentSecondObjectOneTable.titleActionButton}}{{/link-to}}</button>
               <div class="advantage-do-it-buttom-background-borders">
          </div>
         </div>
@@ -97,7 +97,7 @@
                         <h1>{{contentObject.contentObjectDoubleTable.descriptionActionButton}}</h1>
                     </div>
 
-                   <button class="advantage-access-here-button" style = "background:url(/assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;" >{{#link-to "visit-us" }}{{contentObject.contentObjectDoubleTable.titleActionButton}}{{/link-to}}</button>
+                   <button class="advantage-access-here-button" style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;" >{{#link-to "visit-us" }}{{contentObject.contentObjectDoubleTable.titleActionButton}}{{/link-to}}</button>
 
                    <div class="advantage-access-here-button-background-borders">
                    </div>
@@ -116,7 +116,7 @@
                         <h1>{{contentObject.contentObjectDoubleTable.descriptionActionButton}}</h1>
                     </div>
 
-                   <button class="advantage-access-here-button" style = "background:url(/assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;" >{{#link-to "visit-us" }}{{contentObject.contentObjectDoubleTable.titleActionButton}}{{/link-to}}</button>
+                   <button class="advantage-access-here-button" style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;" >{{#link-to "visit-us" }}{{contentObject.contentObjectDoubleTable.titleActionButton}}{{/link-to}}</button>
 
                    <div class="advantage-access-here-button-background-borders">
                    </div>
@@ -151,7 +151,7 @@
             <div class="advantage-meeting-information-title">
                 <h1>{{contentObject.contentObjectOneTable.descriptionActionButton}}</h1>
             </div>
-            <button class="advantage-do-it-button" style = "background:url(/assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;"> {{#link-to "visit-us" }}{{contentObject.contentObjectOneTable.titleActionButton}}{{/link-to}}</button>
+            <button class="advantage-do-it-button" style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;"> {{#link-to "visit-us" }}{{contentObject.contentObjectOneTable.titleActionButton}}{{/link-to}}</button>
               <div class="advantage-do-it-buttom-background-borders">
          </div>
         </div>
@@ -210,7 +210,7 @@
                 <h1>{{contentObject.contentObjectSecondTable.descriptionActionButton}}</h1>
             </div>
 
-            <button class="advantage-do-it-button"  style = "background:url(/assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentObjectSecondTable.titleActionButton}}{{/link-to}}</button>
+            <button class="advantage-do-it-button"  style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentObjectSecondTable.titleActionButton}}{{/link-to}}</button>
               <div class="advantage-do-it-buttom-background-borders">
          </div>
         </div>
@@ -246,7 +246,7 @@
                 <h1>{{contentObject.contentObjectThirdTable.descriptionActionButton}}</h1>
             </div>
 
-            <button class="advantage-do-it-button"  style = "background:url(/assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentObjectThirdTable.titleActionButton}}{{/link-to}}</button>
+            <button class="advantage-do-it-button"  style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentObjectThirdTable.titleActionButton}}{{/link-to}}</button>
               <div class="advantage-do-it-buttom-background-borders">
          </div>
         </div>
@@ -314,7 +314,7 @@
                 <h1>{{contentObject.contentObjectWithoutTable.descriptionActionButton}}</h1>
             </div>
 
-            <button class="advantage-do-it-button"  style = "background:url(/assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentObjectWithoutTable.titleActionButton}}{{/link-to}}</button>
+            <button class="advantage-do-it-button"  style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentObjectWithoutTable.titleActionButton}}{{/link-to}}</button>
               <div class="advantage-do-it-buttom-background-borders">
          </div>
         </div>
@@ -345,7 +345,7 @@
                 <h1>{{contentObject.contentSecondObjectWithoutTable.descriptionActionButton}}</h1>
             </div>
 
-            <button class="advantage-do-it-button"  style = "background:url(/assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentSecondObjectWithoutTable.titleActionButton}}{{/link-to}}</button>
+            <button class="advantage-do-it-button"  style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentSecondObjectWithoutTable.titleActionButton}}{{/link-to}}</button>
               <div class="advantage-do-it-buttom-background-borders">
          </div>
         </div>
