--- a/app/styles/community-advantage-container.scss
+++ b/app/styles/community-advantage-container.scss
@@ -31,7 +31,7 @@
            z-index:1;
            overflow: visible;
            position: absolute;
-           background-image:url(/assets/images/community_description_container.png);
+           background-image:url(../assets/images/community_description_container.png);
            background-size: 100%;
            background-repeat: no-repeat;*/
            
@@ -53,7 +53,7 @@
            overflow: visible;
            margin-right: 45%;
            z-index:2;
-           content:url(/assets/images/community-background-membership.jpg);*/
+           content:url(../assets/images/community-background-membership.jpg);*/
        }
 
        .membership-detail-main-picture {
@@ -63,7 +63,7 @@
            z-index:99;
            margin-right: -20%;
            margin-top: -3%;
-           content:url(/assets/images/retangleLogo.png);*/
+           content:url(../assets/images/retangleLogo.png);*/
        }
        
          .membership-main-title {
@@ -74,7 +74,7 @@
            overflow: auto;
            position: absolute;
            z-index:3;
-           background:url(/assets/images/background_button_membership.png);
+           background:url(../assets/images/background_button_membership.png);
            background-size:100%; 
            background-repeat: no-repeat;*/
            
@@ -123,7 +123,7 @@
            z-index:2;
            overflow: visible;
            position: absolute;
-           background-image:url(/assets/images/community_description_container.png);
+           background-image:url(../assets/images/community_description_container.png);
            background-size: 100%;
            background-repeat: no-repeat;
            
@@ -145,7 +145,7 @@
            overflow: visible;
            margin-right: 45%;
            z-index:1;
-           content:url(/assets/images/community-background-membership.jpg);
+           content:url(../assets/images/community-background-membership.jpg);
        }
 
        .membership-detail-main-picture {
@@ -155,7 +155,7 @@
            z-index:99;
            margin-right: -20%;
            margin-top: -4%;
-           content:url(/assets/images/retangleLogo.png);
+           content:url(../assets/images/retangleLogo.png);
        }
        
          .membership-main-title {
@@ -166,7 +166,7 @@
            overflow: auto;
            position: absolute;
            z-index:3;
-           background:url(/assets/images/background_button_membership.png);
+           background:url(../assets/images/background_button_membership.png);
            background-size:100%; 
            background-repeat: no-repeat;
            
@@ -224,7 +224,7 @@
            align-content: center;
            margin-left: 6vw;
            z-index:1;
-           background-image:url(/assets/images/community_description_container_responsive.png);
+           background-image:url(../assets/images/community_description_container_responsive.png);
            background-size: 99%;
            background-repeat: no-repeat;
           
@@ -251,7 +251,7 @@
            margin-top: -10.9vw;
            //margin-right: 45%;
            z-index:2;
-           content:url(/assets/images/community-background-membership.jpg);
+           content:url(../assets/images/community-background-membership.jpg);
        }
 
        .membership-detail-main-picture {
@@ -261,7 +261,7 @@
            z-index:99;
            margin-left: 2vw;
            margin-top: -225vw;
-           content:url(/assets/images/retangleLogo.png);
+           content:url(../assets/images/retangleLogo.png);
        }
        
          .membership-main-title {
@@ -272,7 +272,7 @@
            overflow: auto;
            position: absolute;
            z-index:3;
-           background:url(/assets/images/background_button_membership.png);
+           background:url(../assets/images/background_button_membership.png);
            background-size:100%; 
            background-repeat: no-repeat;
            
