--- a/app/styles/community-opnion-header-container.scss
+++ b/app/styles/community-opnion-header-container.scss
@@ -39,7 +39,7 @@
             width: 10%;
             margin-left: 39vw;
             margin-top: -2%;
-            background:url(/assets/images/image-title-opinion.png);
+            background:url(../assets/images/image-title-opinion.png);
             background-size:40%; 
             background-repeat: no-repeat;
             z-index: 99;*/
@@ -89,7 +89,7 @@
             width: 10%;
             margin-left: 39vw;
             margin-top: -2%;
-            background:url(/assets/images/image-title-opinion.png);
+            background:url(../assets/images/image-title-opinion.png);
             background-size:40%; 
             background-repeat: no-repeat;
             z-index: 0;
@@ -145,7 +145,7 @@
             width: 33%;
             margin-left: 42vw;
             margin-top: -20%;
-            background:url(/assets/images/image-title-opinion.png);
+            background:url(../assets/images/image-title-opinion.png);
             background-size:40%; 
             background-repeat: no-repeat;
             z-index: 99;
