--- a/app/styles/community-relationship-container.scss
+++ b/app/styles/community-relationship-container.scss
@@ -25,7 +25,7 @@
            z-index:1;
            overflow: visible;
            position: absolute;
-           background-image:url(/assets/images/background_community_relatoinship.png);
+           background-image:url(../assets/images/background_community_relatoinship.png);
            background-size: 100%;
            background-repeat: no-repeat;*/
 
@@ -49,7 +49,7 @@
            margin-left: 32%;
            z-index:-1;
            margin-top: -2%;
-           content:url(/assets/images/community-background-relationship.jpg);*/
+           content:url(../assets/images/community-background-relationship.jpg);*/
        }
 
        .relationship-detail-main-picture {
@@ -59,7 +59,7 @@
            z-index:99;
            margin-left: -38%;
            margin-top: -6%;
-           content:url(/assets/images/rectangle_community_main_picture.png);*/
+           content:url(../assets/images/rectangle_community_main_picture.png);*/
         }
 
        
@@ -72,7 +72,7 @@
            overflow: auto;
            position: absolute;
            z-index:3;
-           background:url(/assets/images/button_community_relationship.png);
+           background:url(../assets/images/button_community_relationship.png);
            background-size:100%; 
            background-repeat: no-repeat;*/
            
@@ -115,7 +115,7 @@
            z-index:1;
            overflow: visible;
            position: absolute;
-           background-image:url(/assets/images/background_community_relatoinship.png);
+           background-image:url(../assets/images/background_community_relatoinship.png);
            background-size: 100%;
            background-repeat: no-repeat;
 
@@ -139,7 +139,7 @@
            margin-left: 32%;
            z-index:-1;
            margin-top: -2%;
-           content:url(/assets/images/community-background-relationship.jpg);
+           content:url(../assets/images/community-background-relationship.jpg);
        }
 
        .relationship-detail-main-picture {
@@ -149,7 +149,7 @@
            z-index:99;
            margin-left: -38%;
            margin-top: -6%;
-           content:url(/assets/images/rectangle_community_main_picture.png);
+           content:url(../assets/images/rectangle_community_main_picture.png);
         }
 
        
@@ -162,7 +162,7 @@
            overflow: auto;
            position: absolute;
            z-index:3;
-           background:url(/assets/images/button_community_relationship.png);
+           background:url(../assets/images/button_community_relationship.png);
            background-size:100%; 
            background-repeat: no-repeat;
            
@@ -207,7 +207,7 @@
            z-index:1;
            overflow: visible;
            position: absolute;
-           background-image:url(/assets/images/container-relation-text-responsive.png);
+           background-image:url(../assets/images/container-relation-text-responsive.png);
            background-size: 100%;
            background-repeat: no-repeat;
            
@@ -232,7 +232,7 @@
            margin-left: 17vw;
            z-index:-1;
            margin-top: 18%;
-           content:url(/assets/images/community-background-relationship.jpg);
+           content:url(../assets/images/community-background-relationship.jpg);
        }
 
        .relationship-detail-main-picture {
@@ -242,7 +242,7 @@
            z-index:99;
            margin-left: -20%;
            margin-top: 10%;
-           content:url(/assets/images/rectangle_community_main_picture.png);
+           content:url(../assets/images/rectangle_community_main_picture.png);
         }
 
        
@@ -255,7 +255,7 @@
            overflow: auto;
            position: absolute;
            z-index:3;
-           background:url(/assets/images/button_community_relationship.png);
+           background:url(../assets/images/button_community_relationship.png);
            background-size:100%; 
            background-repeat: no-repeat;
            
