--- a/app/styles/community.scss
+++ b/app/styles/community.scss
@@ -53,7 +53,7 @@ body{
         background-repeat: no-repeat;
         background-size: cover;
         display: block;
-        background-image: url('/assets/images/community-background-navbar.jpg');
+        background-image: url('../assets/images/community-background-navbar.jpg');
         width: 100%;
         height: 100%;
 
