--- a/app/styles/knowledge-events-content-item.scss
+++ b/app/styles/knowledge-events-content-item.scss
@@ -16,7 +16,7 @@ $content-width: 28vw;
                             /*width: 100%;
                             background-repeat: no-repeat;
                             background-size: cover;
-                            background-image: url('/assets/images/workspace-header-item-background-filter.png');*/
+                            background-image: url('../assets/images/workspace-header-item-background-filter.png');*/
 
     
                                 .knowledge-events-content-item-header {
@@ -210,7 +210,7 @@ $content-width: 28vw;
             }
  
             .image {
-                content: url('/assets/images/workspace-anuity-button-image-work.png');
+                content: url('../assets/images/workspace-anuity-button-image-work.png');
                 width: 2.7vw;
                 height: 2.3vw;
                 margin-left: 113%;
@@ -244,7 +244,7 @@ $content-width: 28vw;
                     width: 100%;
                     background-repeat: no-repeat;
                     background-size: cover;
-                    background-image: url('/assets/images/workspace-header-item-background-filter.png');
+                    background-image: url('../assets/images/workspace-header-item-background-filter.png');
 
     
                 .knowledge-events-content-item-header {
@@ -351,7 +351,7 @@ $content-width: 28vw;
                     width: 100%;
                     background-repeat: no-repeat;
                     background-size: cover;
-                    background-image: url('/assets/images/workspace-header-item-background-filter.png');
+                    background-image: url('../assets/images/workspace-header-item-background-filter.png');
 
     
                 .knowledge-events-content-item-header {
