--- a/app/styles/knowledge-opnion-header-container.scss
+++ b/app/styles/knowledge-opnion-header-container.scss
@@ -39,7 +39,7 @@
             width: 10%;
             margin-left: 40%;
             margin-top: -1.5%;
-            background:url(/assets/images/image-title-opinion.png);
+            background:url(../assets/images/image-title-opinion.png);
             background-size:20%; 
             background-repeat: no-repeat;
             z-index: 0;*/
@@ -89,7 +89,7 @@
                 width: 10%;
                 margin-left: 40%;
                 margin-top: -1.5%;
-                background:url(/assets/images/image-title-opinion.png);
+                background:url(../assets/images/image-title-opinion.png);
                 background-size:20%; 
                 background-repeat: no-repeat;
                 z-index: 0;
@@ -144,7 +144,7 @@
                 width: 33%;
                 margin-left: 42vw;
                 margin-top: -20%;
-                background:url(/assets/images/image-title-opinion.png);
+                background:url(../assets/images/image-title-opinion.png);
                 background-size:40%; 
                 background-repeat: no-repeat;
                 z-index: 99;
