--- a/app/styles/navbar-responsive-mobile.scss
+++ b/app/styles/navbar-responsive-mobile.scss
@@ -23,7 +23,7 @@
 
   .app-logo {
    
-    background-image: url("/assets/images/logo.png");
+    background-image: url("../assets/images/logo.png");
     background-repeat: no-repeat;
     background-position: center;
     -webkit-transition: all 0.2s ease-in-out;
@@ -59,7 +59,7 @@
 
 
         .burger-menu {
-           background:url(/assets/images/menu_burger.png);
+           background:url(../assets/images/menu_burger.png);
            background-size:4vh; 
            background-repeat: no-repeat;
            color: red;
