--- a/app/styles/top-bar.scss
+++ b/app/styles/top-bar.scss
@@ -16,7 +16,7 @@
 
   .app-logo {
    
-    background-image: url("/assets/images/logo.png");
+    background-image: url("../assets/images/logo.png");
     background-repeat: no-repeat;
     background-position: center;
     -webkit-transition: all 0.2s ease-in-out;
@@ -182,7 +182,7 @@
 
 
         .burger-menu {
-           background:url(/assets/images/menu_burger.png);
+           background:url(../assets/images/menu_burger.png);
            background-size: 4vh; 
            background-repeat: no-repeat;
            color: red;
