--- a/app/styles/work-space-advantage-container.scss
+++ b/app/styles/work-space-advantage-container.scss
@@ -105,7 +105,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
 
         .advantage-background-image {
         
-            content: url('/assets/images/background-workspace-options.png');
+            content: url('../assets/images/background-workspace-options.png');
             margin-top: 10%;
             margin-left: 4%;
             width: 3vw;
@@ -118,7 +118,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
          width: 100%; 
          height: 40%;
          margin-left:5vw;
-         background:url(/assets/images/icon-title-options.png);
+         background:url(../assets/images/icon-title-options.png);
          background-size:100%; 
          background-repeat: no-repeat;
          vertical-align: middle;
@@ -261,7 +261,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
          }
 
         .advantage-access-here-button-background-borders {
-            /*content: url('/assets/images/background-boarder-do-here.png');
+            /*content: url('../assets/images/background-boarder-do-here.png');
                 // background-repeat: no-repeat;
                 // background-size: cover;
             margin-top: -6.6vw;
@@ -332,7 +332,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
          width: 100%; 
          height: 34%;
          margin-left:5vw;
-         background:url(/assets/images/icon-title-options.png);
+         background:url(../assets/images/icon-title-options.png);
          background-size:100%; 
          background-repeat: no-repeat;
             
@@ -388,7 +388,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
                 height: 3vw;
 
               .image-icon{
-                    content: url('/assets/images/workstation-events-suport-icon.png');
+                    content: url('../assets/images/workstation-events-suport-icon.png');
                     width: 1.6vw;
                     height: 1.6vw;
                     margin-right: 0.4vw;
@@ -408,13 +408,13 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
 
         .advantage-background-support-image {
         
-            content: url('/assets/images/background-workspace-spaces.png');
+            content: url('../assets/images/background-workspace-spaces.png');
             margin-top: -8vw;
             margin-left: -12vw;
             width: 2.8vw;
             height: 28vw;
             
-            /*content: url('/assets/images/background-workspace-options.png');
+            /*content: url('../assets/images/background-workspace-options.png');
             margin-top: 10%;
             margin-left: 4%;
             width: 3vw;
@@ -450,7 +450,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
         //margin-bottom: 15%;
 
       .advantage-meeting-room-background-borders {
-            content: url('/assets/images/background-border-meeting-rooms.png');
+            content: url('../assets/images/background-border-meeting-rooms.png');
                 // background-repeat: no-repeat;
                 // background-size: cover;
             margin-top: -4vw;
@@ -518,7 +518,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
         position: absolute;
 
           .advantage-do-it-buttom-background-borders {
-            /*content: url('/assets/images/background-boarder-do-here.png');
+            /*content: url('../assets/images/background-boarder-do-here.png');
             margin-left: 16vw;
             margin-top: 4vw;
             width: 18.63vw;
@@ -587,7 +587,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
          width: 100%; 
          height: 41%;
          margin-left:5vw;
-         background:url(/assets/images/icon-title-options.png);
+         background:url(../assets/images/icon-title-options.png);
          background-size:100%; 
          background-repeat: no-repeat;
             
@@ -645,7 +645,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
                 height: 3vw;
 
               .image-icon{
-                    content: url('/assets/images/workstation-events-suport-icon.png');
+                    content: url('../assets/images/workstation-events-suport-icon.png');
                     width: 1.6vw;
                     height: 1.6vw;
                     margin-right: 0.4vw;
@@ -665,13 +665,13 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
 
         .advantage-background-showroom-support-image {
         
-            content: url('/assets/images/background-workspace-spaces.png');
+            content: url('../assets/images/background-workspace-spaces.png');
             margin-top: -8vw;
             margin-left: -12vw;
             width: 2.8vw;
             height: 28vw;
             
-            /*content: url('/assets/images/background-workspace-options.png');
+            /*content: url('../assets/images/background-workspace-options.png');
             margin-top: 10%;
             margin-left: 4%;
             width: 3vw;
@@ -793,7 +793,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
 
         .advantage-background-image {
         
-            content: url('/assets/images/background-workspace-options.png');
+            content: url('../assets/images/background-workspace-options.png');
             margin-top: 10%;
             margin-left: 4%;
             width: 3vw;
@@ -806,7 +806,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
          width: 90vw; 
          height: 36vw;
          margin-left:-8vw;
-         background:url(/assets/images/work-space-header-title-table-responsive.png);
+         background:url(../assets/images/work-space-header-title-table-responsive.png);
          background-size:100%; 
          background-repeat: no-repeat;
          vertical-align: middle;
@@ -971,7 +971,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
          width: 90vw; 
          height: 36vw;
          margin-left:-8vw;
-         background:url(/assets/images/work-space-header-title-table-responsive.png);
+         background:url(../assets/images/work-space-header-title-table-responsive.png);
          background-size:100%; 
          background-repeat: no-repeat;
          vertical-align: middle;
@@ -982,7 +982,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
          height: 36vw;
          margin-left:-8vw;
          vertical-align: middle;
-         background:url(/assets/images/work-space-header-title-table-responsive.png);
+         background:url(../assets/images/work-space-header-title-table-responsive.png);
          background-size:100%; 
          background-repeat: no-repeat;
             
@@ -1045,7 +1045,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
 
 
               .image-icon{
-                    content: url('/assets/images/workstation-events-suport-icon.png');
+                    content: url('../assets/images/workstation-events-suport-icon.png');
                     width: 6vw;
                     height: 6vw;
                     margin-top: 2vw;
@@ -1067,13 +1067,13 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
 
         .advantage-background-support-image {
         
-            //content: url('/assets/images/background-workspace-spaces.png');
+            //content: url('../assets/images/background-workspace-spaces.png');
             /*margin-top: -8vw;
             margin-left: -12vw;
             width: 2.8vw;
             height: 28vw;
             */
-            /*content: url('/assets/images/background-workspace-options.png');
+            /*content: url('../assets/images/background-workspace-options.png');
             margin-top: 10%;
             margin-left: 4%;
             width: 3vw;
@@ -1111,7 +1111,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
         margin-bottom: 0%;
 
       .advantage-meeting-room-background-borders {
-            /*content: url('/assets/images/background-boarder-do-here.png');
+            /*content: url('../assets/images/background-boarder-do-here.png');
                 // background-repeat: no-repeat;
                 // background-size: cover;
             margin-top: 30%;
@@ -1254,7 +1254,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
          height: 36vw;
          margin-left:-8vw;
          vertical-align: middle;
-         background:url(/assets/images/work-space-header-title-table-responsive.png);
+         background:url(../assets/images/work-space-header-title-table-responsive.png);
          background-size:100%; 
          background-repeat: no-repeat;
         h1 {
@@ -1315,7 +1315,7 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
                 height: 10vw;
 
               .image-icon{
-                    content: url('/assets/images/workstation-events-suport-icon.png');
+                    content: url('../assets/images/workstation-events-suport-icon.png');
                     width: 5vw;
                     height: 5vw;
                     
