--- a/app/styles/work-space-opnion-header-container.scss
+++ b/app/styles/work-space-opnion-header-container.scss
@@ -40,7 +40,7 @@
             width: 10%;
             margin-left: 39vw;
             margin-top: -2%;
-            background:url(/assets/images/image-title-opinion.png);
+            background:url(../assets/images/image-title-opinion.png);
             background-size:40%; 
             background-repeat: no-repeat;
             z-index: 0;*/
@@ -92,7 +92,7 @@
                 width: 10%;
                 margin-left: 39vw;
                 margin-top: -2%;
-                background:url(/assets/images/image-title-opinion.png);
+                background:url(../assets/images/image-title-opinion.png);
                 background-size:40%; 
                 background-repeat: no-repeat;
                 z-index: 0;
@@ -149,7 +149,7 @@
                 width: 33%;
                 margin-left: 42vw;
                 margin-top: -20%;
-                background:url(/assets/images/image-title-opinion.png);
+                background:url(../assets/images/image-title-opinion.png);
                 background-size:40%; 
                 background-repeat: no-repeat;
                 z-index: 99;
