--- a/app/templates/components/work-space/work-space-type-spaces-content-item.hbs
+++ b/app/templates/components/work-space/work-space-type-spaces-content-item.hbs
@@ -1,7 +1,7 @@
 <div class="work-space-types-spaces-content-item" onmouseout={{action "outHover"}} onmouseover={{action "onHover"}} >
 
 <div class="work-space-types-spaces-content-background-image" style="background-image: url({{headerImageSrc}});">
-        <div class="work-space-types-spaces-content-background-filter" style="background-image: url(/assets/images/workspace-option-background-image-filter.png);  {{opacityOutHoverProperty}}"> </div>
+        <div class="work-space-types-spaces-content-background-filter" style="background-image: url(../assets/images/workspace-option-background-image-filter.png);  {{opacityOutHoverProperty}}"> </div>
         <div class="work-space-types-spaces-content-background-filter" style="background-image: url({{backgroundFilterHoverSrc}}); {{opacityHoverProperty}}"> </div>
 </div>
 <img src="{{titleImageSrc}}" class="work-space-types-spaces-content-title">
